5069
Wow, java lets you do that? That's kind of frightening.

You don't need to get all bitshifty, this is enough.
```scala
scala> var a = 0
a: Int = 0

scala> a += 1L  
<console>:7: error: type mismatch;
 found   : Int
 required: ?{val +(x$$1: ?>: Long(1L) <: Any): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Predef of type (x: Int)Long
 and method int2float in object Predef of type (x: Int)Float
 are possible conversion functions from Int to ?{val +(x$$1: ?>: Long(1L) <: Any): ?}
       a += 1L
       ^  
```
